# neurosave

./: .gitattributes  .gitignore  CLAUDE.md  alembic.ini  config.py  dev.py  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
api/: app.py  auth.py  dependencies.py
api/routers/: bot.py  contacts.py  ghost.py  integrations.py  reminders.py  settings.py  sync.py  tasks.py
bot/: config_store.py  reminder_store.py  schedule.py  telethon_client.py  tutorial.py
bot/handlers/: business_messages.py  callbacks.py  commands.py  direct_messages.py  ghost.py
bot/keyboards/: settings.py  tasks.py
bot/middlewares/: db_session.py  privacy_gate.py
db/: engine.py  models.py
db/repositories/: contacts.py  ghost.py  integration_configs.py  messages.py  oauth.py  tasks.py  user_settings.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_task_business_connection.py  0003_contact_saved_name.py  0004_contact_has_business_chat.py  0005_ghost_inquiry_pending.py  0006_message_embedding.py  0007_username_columns.py  0008_task_reminder_fields.py  0009_ghost_silent_mode.py  0010_contact_enhancements.py  0011_user_settings.py  0012_user_telethon_session.py  0013_oauth_tables.py  0014_contact_crm_fields.py  0015_contacts_unique_owner_user.py  0016_remove_crm_fields.py  0017_integration_configs.py  (+6 more)
miniapp/: next.config.ts  package-lock.json  package.json
scripts/: backfill_embeddings.py  import_telegram_history.py
services/: ai.py  contact_sync.py  gmail.py  google_calendar.py  google_docs.py  google_sheets.py  notion.py
workers/: broker.py  contact_sync_worker.py  deadline_reminder.py  gmail_reply_worker.py  morning_brief.py  reminder_worker.py
(+58 files in other folders)
