[project]
name = "neurosave"
version = "0.1.0"
description = "Telegram personal assistant bot for entrepreneurs"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "openai>=1.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "taskiq>=0.11",
    "taskiq-redis>=0.5",
    "pydantic-settings>=2.3",
    "beartype>=0.18",
    "redis>=5.0",
    "tzdata>=2026.2",
]

[project.optional-dependencies]
dev = ["mypy", "pyright"]

[tool.uv]
package = false

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
